package com.randioo.mahjong_public_server.protocol;

message RoleData{
	optional int32 roleId = 1;
	optional int32 gameId = 2;

	/*optional string name = 2;
	optional int32 money = 3;
	optional int32 volume = 4;
	optional int32 musicVolume = 5;
	optional string headImgUrl = 6;
	optional int32 randiooMoney = 7;*/
}

message GameConfig{
	optional int32 raceType = 1;
	optional int32 maxCount = 2;
	optional int32 gangScore = 3;
	optional bool zhuahu = 4;
	optional int32 endCatchCount = 5;
	optional int32 catchScore = 6;
	optional bool gangkai = 7;
	optional int32 minStartScore = 8;
	optional string endTime = 9;
}
message PaiNum{
	optional int32 seat = 1;
	optional int32 num = 3;
}

message Record{
	optional int32 seat = 1;
	repeated int32 pai = 2;
}

enum GameType{
	GAME_TYPE_MATCH = 1;
	GAME_TYPE_FRIEND = 2;
}

message GameRoleData{
	optional string gameRoleId = 1;
	optional string name = 2;
	optional int32 seat = 3;
	optional bool ready = 4;
	optional string headImgUrl = 5;
	optional int32 money = 6;
}

enum GameState{
	GAME_STATE_PREPARE = 1;
	GAME_START_START = 2;
	GAME_START_END = 3;
}

message CallGangData{
	optional int32 callId = 1;
	optional GangData gangData = 2;
}

message GangData{
	repeated int32 card = 2;
}

message CallPengData{
	optional int32 callId = 1;
	optional PengData pengData = 2;
}

message PengData{
	optional int32 targetSeat = 1;
	optional int32 card = 2;
}

message CallHuData{
	optional int32 callId = 1;
	optional HuData huData = 2;
}

message HuData{
	repeated int32 card = 2;
}

message CallChiData{
	optional int32 callId = 1;
	optional ChiData chiData = 2;	
}

message ChiData{
	optional int32 card1 = 2;
	optional int32 card2 = 3;
	optional int32 card3 = 4;
}

message GameOverData{
	optional string name = 1;
	optional int32 landLordNum = 2;
	optional int32 farmerNum = 3;
	optional int32 score = 4;
}

message RecommandPai{
	repeated int32 pai = 1; 
}

message Score{
	optional string name = 1;
	optional int32 score = 2;
	optional int32 allScore = 3;
}

message GameData{
	optional int32 gameId = 1;
	repeated GameRoleData gameRoleData = 2;
}